--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jasonkirker/liri-node-app/issues"
   },
-  "homepage": "https://github.com/jasonkirker/liri-node-app#readme"
+  "homepage": "https://github.com/jasonkirker/liri-node-app#readme",
+  "dependencies": {
+    "dotenv": "^6.0.0"
+  }
 }
