--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/jasonkirker/liri-node-app#readme",
   "dependencies": {
-    "dotenv": "^6.0.0"
+    "dotenv": "^6.0.0",
+    "node-spotify-api": "^1.0.7",
+    "omdb": "^0.8.0"
   }
 }
